--- a/index.Rmd
+++ b/index.Rmd
@@ -178,7 +178,6 @@ provincias_especies <-
   group_by(provincia.x) %>%
   summarize(especies = n_distinct(species, na.rm = TRUE)) %>%
   rename(provincia = provincia.x)
-# otra opcion summarize(registros = n())
 ```
 
 ```{r map_provincias+especies, message=FALSE, warning=FALSE}
@@ -244,7 +243,9 @@ leaflet() %>%
 
 ## Mapa agrupado (clustered)
  
- clusterOptions = markerClusterOptions()
+Funcion: 
+
+>clusterOptions = markerClusterOptions()
 
 ```{r}
 # Paleta de colores
@@ -306,4 +307,77 @@ leaflet() %>%
 
 ```
 
+## Mapa de cantidad de especies por canton
+
+```{r calculo_cantones_especies, message=FALSE, warning=FALSE}
+
+# creacion de  conjunto de datos con la cantidad de especies por canton
+cantones_especies <-
+  cantones %>%
+  st_join(primates) %>%
+  group_by(canton.x) %>%
+  summarize(especies = n_distinct(species, na.rm = TRUE)) %>%
+  rename(canton = canton.x)
+```
+
+```{r}
+# Paleta de colores
+colores_especies <-
+  colorNumeric(
+    palette = "YlOrRd",
+    domain = cantones_especies$especies,
+    na.color = "transparent"
+  )
+
+# Mapa Leaflet
+leaflet() %>%
+  addTiles(group = "OMS") %>%
+  addPolygons(
+    data = cantones_especies,
+    fillColor = ~ colores_especies(cantones_especies$especies),
+    fillOpacity = 0.7,
+    stroke = TRUE,
+    color = "black",
+    weight = 1,
+    popup = paste(
+      paste(
+        "<strong>Provincia:</strong>",
+        provincias_especies$canton
+      ),
+      paste(
+        "<strong>Altitud media:</strong>",
+        round(cantones_especies$especies, digits = 2)
+      ),
+      sep = '<br/>'
+    ),
+    group = "Cantones - especies"
+  ) %>%
+  addCircleMarkers(
+    data = primates,
+    stroke = F,
+    radius = 2,
+    fillColor = 'black',
+    fillOpacity = 1,
+    popup = paste(
+      primates$species,
+      primates$provincia,
+      primates$canton,
+      primates$eventDate,
+      paste0("<a href='", primates$occurrenceID, "'>Mas informacion</a>"),
+      sep = '<br/>'
+    ),
+     clusterOptions = markerClusterOptions(),
+    group = "Primates"
+  ) %>%
+  addLayersControl(baseGroups = c("OMS"),
+                   overlayGroups = c("Cantones - especies", "Primates")) %>%
+  addLegend(
+    position = "bottomleft",
+    pal = colores_especies,
+    values = cantones_especies$especies,
+    group = "Cantones - especies",
+    title = "Cantidad de especies"
+  )
+```
 ## Mapa de calor
+
